<resources>
    <string name="app_name">FinalProject4</string>
    <string name="tv_bux">Bux</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_submit">Submit</string>
    <string name="str_login">Login</string>
    <string name="str_new_user_register_here">New User? Register Here</string>
    <string name="str_register">Register</string>
    <string name="str_name">Name</string>
    <string name="you_re_all_set_and_ready_to_use_bux">You\'re all set and ready to use bux</string>
    <string name="enjoy_our_service">Enjoy our service!</string>
    <string name="take_me_to_bux">Take Me To Bux</string>
    <string name="everything_s_up">Everything\'s up</string>
    <string name="select">Select</string>
    <string name="retail_payment">Retail Payment</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="credit_card">Credit Card</string>
    <string name="payment_method">Payment Method</string>
    <string name="please_select_one_of_the_payment_method_below">Please select one of the payment method below</string>
    <string name="rp332_333_00">Rp332.333,00</string>
    <string name="total_payment">Total Payment</string>
    <string name="payment">Payment</string>
    <string name="bni_mobile_banking">Bni Mobile Banking</string>
    <string name="cimb_niaga_mobile_banking">CIMB Niaga Mobile Banking</string>
    <string name="_4_after_you_press_continue_input_this_number_to_the_transfer_amount_field">4. After you press continue, input this number to the transfer amount field.</string>
    <string name="_230719_0001">230719-0001</string>
    <string name="_1_select_transfer">1. Select transfer</string>
    <string name="_2_in_sub_menu_select_virtual_account_transfer">2. In sub menu select virtual account transfer</string>
    <string name="_3_type_this_number_in_the_field">3. Type this number in the field</string>
    <string name="_5_dont_forget_to_keep_the_receipt_for_vertificaion_process_n">5.dont forget to keep the receipt for vertificaion process \n</string>
    <string name="mastercard_credit_card">MasterCard Credit Card</string>
    <string name="visa_credit_card">Visa Credit Card</string>
    <string name="vcc">VCC</string>
    <string name="surename">Surename</string>
    <string name="card_holder">Card Holder</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="valid_until">Valid until</string>
    <string name="SecretNumber">****    </string>
    <string name="str_capacity">Capacity :</string>
    <string name="str_type">"Type : </string>
    <string name="alfamart">Alfamart</string>
    <string name="_3_the_cashier_will_ask_what_is_your_booking_code_n_n_here_is_your_bookking_code">3. The cashier will ask what is your booking code.\n \n Here is your bookking code</string>
    <string name="_2_when_you_asked_what_payment_answer_bux">2. When you asked what Payment, answer Bux</string>
    <string name="_1_ask_the_casier_for_online_payment">1. Ask the casier for Online payment</string>
    <string name="_4_you_re_gonna_be_charged_as_much_as_the_total_n_payment_as_you_can_see_in_this_header_n">4. You\'re gonna be charged as much as the total \n payment.(as you can see in this header).\n</string>
    <string name="_5_keep_the_receipt_in_case_you_re_having_problem_n_with_payment_verification">5. Keep the receipt, in case you\'re having problem \n with payment verification.\n\n\n</string>
    <string name="verify_payment">Verify Payment</string>
    <string name="book_a_trip">Book a trip</string>
    <string name="str_avaiable_seat">Avaiable seat</string>
    <string name="str_seat_are_avaiable">Seat are avaiable</string>
    <string name="str_class">Class</string>
    <string name="str_book_now">Book Now</string>
</resources>