<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectedRetailPaymentActivity">
    <TextView
        android:id="@+id/tvSelectedRetailPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvSelectedRetailPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSelectedRetailPayment"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <LinearLayout
            android:id="@+id/llSelectedRetailPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llSelectedRetailPayment2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvSelectedRetailPayment2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_payment" />

                <TextView
                    android:id="@+id/tvSelectedRetailPayment3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rp332_333_00"
                    android:textColor="@color/purple_500"
                    android:textSize="30sp" />
            </LinearLayout>

            <View
                android:id="@+id/vSelectedRetailPayment"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/llSelectedRetailPayment3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:id="@+id/tvSelectedRetailPayment4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/please_select_one_of_the_payment_method_below"
                    android:padding="3dp"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvSelectedRetailPayment2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvSelectedRetailPayment"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <LinearLayout
            android:id="@+id/llSelectedRetailPayment4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/llSelectedRetailPayment5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/ivSelectedRetailPayment"
                    android:layout_width="45dp"
                    android:layout_height="22dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/alfamartlogo"
                    android:scaleType="fitXY" />
                <TextView
                    android:id="@+id/tvSelectedRetailPayment5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alfamart"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <View
                android:id="@+id/vSelectedRetailPayment2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />
            <LinearLayout
                android:id="@+id/llSelectedRetailPayment6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:id="@+id/tvSelectedRetailPayment6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_ask_the_casier_for_online_payment"/>
                <TextView
                    android:id="@+id/tvSelectedRetailPayment7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_when_you_asked_what_payment_answer_bux"/>
                <TextView
                    android:id="@+id/tvSelectedRetailPayment8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3_the_cashier_will_ask_what_is_your_booking_code_n_n_here_is_your_bookking_code"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/clSelectedRetailPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cvSelectedRetailPayment2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:id="@+id/tvSelectedRetailPayment9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_230719_0001"
            android:textSize="20sp"
            android:textColor="@color/purple_700"
            android:textAlignment="center"
            android:layout_marginLeft="130sp"/>
        <ImageView
            android:id="@+id/ivSelectedRetailPayment2"
            android:layout_width="20sp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_qrcode"
            android:layout_marginLeft="60sp"/>
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvSelectedRetailPayment3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clSelectedRetailPayment"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <LinearLayout
            android:id="@+id/llSelectedRetailPayment8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvSelectedRetailPayment10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4_you_re_gonna_be_charged_as_much_as_the_total_n_payment_as_you_can_see_in_this_header_n" />
            <TextView
                android:id="@+id/tvSelectedRetailPayment11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_5_keep_the_receipt_in_case_you_re_having_problem_n_with_payment_verification"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRetailPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_payment"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:background="@drawable/btn_custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvSelectedRetailPayment3"
        android:padding="16dp"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="19sp"
        android:layout_marginRight="19sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>